# rag-test

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SETUP.md  app.py  list_litellm_models.py  pyproject.toml  test_claude.py  verify_setup.py
prompts/: 001-build-rag-system.md
src/: __init__.py  chunk_validator.py  document_processor.py  embeddings.py  llm_client.py  rag_pipeline.py  vector_store.py
tests/: __init__.py  conftest.py  test_chunk_validator.py  test_document_processor_integration.py
